<resources>
    <string name="app_name">정신차려</string>
    <string name="dark_mode">다크 모드</string>
    <string name="light_mode">라이트 모드</string>
    <string name="cost_input_hint_minus">얼마를 썼느냐</string>
    <string name="cost_input_hint_plus">얼마를 벌었느냐</string>
    <string name="expense_name_minus">왜 썼느냐</string>
    <string name="expense_name_plus">왜 벌었느냐</string>
    <string name="enter">입력</string>
    <string name="summary">요약</string>
    <string name="this_year">올해</string>
    <string name="this_month">이번 달</string>
    <string name="today">오늘</string>
    <string name="this_day">이날</string>
    <string name="settings">설정</string>
    <string name="reset">초기화</string>
    <string name="import_db">DB 가져오기</string>
    <string name="export_db">DB 내보내기</string>
    <string name="add_tag">태그 추가</string>
    <string name="no_tag">태그 없음</string>
    <string name="all_tag">전체</string>
    <string name="enter_name">이름을 입력하세요</string>
    <string name="enter_cost">액수를 입력하세요</string>
    <string name="name">이름</string>
    <string name="tag">태그</string>
    <string name="cost">금액</string>
    <string name="duplicate_name">이미 존재하는 이름입니다</string>
    <string name="delete">삭제</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="deleted_tag">삭제된 태그</string>
    <string name="manage_tag">태그 관리</string>
    <string name="save">저장</string>
    <string name="date_selection">날짜 선택</string>
    <string name="ask_reset">모든 데이터를 삭제하시겠습니까?</string>
    <string name="ask_delete_item">항목을 삭제하시겠습니까?</string>
    <string name="invalid_input">잘못된 입력입니다</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="export_success">데이터를 성공적으로 저장하였습니다.</string>
    <string name="import_success">데이터를 성공적으로 불러왔습니다.</string>
    <string name="invalid_file">손상되었거나 잘못된 파일입니다.</string>
    <string name="export_failure">데이터 저장에 실패했습니다.</string>
    <string name="no_new_entries">새로 저장할 데이터가 없습니다.</string>
    <string name="ask_import_db">개의 새로운 데이터를 저장하시겠습니까?</string>
</resources>