<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settingsButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/lightPrimaryText"
        android:clickable="true"
        android:elevation="0dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:rippleColor="@color/lightSecondaryText"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/settingsImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/icon_settings"
            app:tint="@color/lightPrimaryBackground" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/lightPrimaryText"
        android:textFontWeight="900"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/monthSpinner"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/spinner_background"
        android:backgroundTint="@color/lightPrimaryText"
        app:layout_constraintBottom_toBottomOf="@+id/titleText"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintStart_toEndOf="@+id/titleText"
        app:layout_constraintTop_toTopOf="@+id/titleText" />

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <TextView
            android:id="@+id/headerNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/headerCostText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/headerTagText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tag"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp" />

    </LinearLayout>

    <com.simplecityapps.recyclerview_fastscroll.views.FastScrollRecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        app:fastScrollAutoHide="true"
        app:fastScrollAutoHideDelay="1500"
        app:fastScrollPopupBgColor="@color/lightSecondaryText"
        app:fastScrollPopupTextColor="@color/lightPrimaryBackground"
        app:fastScrollThumbColor="@color/lightSecondaryText"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/formContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        tools:itemCount="3"
        tools:listitem="@layout/item_expense" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/summaryButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/summary"
            android:textColor="@color/lightPrimaryBackground"
            android:textFontWeight="900"
            android:textSize="18sp"
            app:backgroundTint="@color/lightPrimaryText"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/lightSecondaryText" />

        <EditText
            android:id="@+id/costEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner_background"
            android:hint="@string/cost_input_hint_minus"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/darkPrimaryText"
            android:textColorHint="@color/darkSecondaryText"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/nameEditText"
            app:layout_constraintEnd_toStartOf="@+id/signButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summaryButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textFontWeight="900"
            android:textSize="24sp"
            app:backgroundTint="@color/red"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@+id/tagSpinner"
            app:layout_constraintStart_toEndOf="@+id/costEditText"
            app:layout_constraintTop_toBottomOf="@+id/summaryButton"
            app:rippleColor="@color/red" />

        <Spinner
            android:id="@+id/tagSpinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signButton"
            app:layout_constraintTop_toBottomOf="@+id/summaryButton" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/spinner_background"
            android:hint="@string/expense_name_minus"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/darkPrimaryText"
            android:textColorHint="@color/darkSecondaryText"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/enterButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/costEditText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enterButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/enter"
            android:textColor="@color/lightPrimaryBackground"
            android:textFontWeight="900"
            android:textSize="18sp"
            app:backgroundTint="@color/lightPrimaryText"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/lightSecondaryText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>