<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightPrimaryBackground"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dateTimeText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="700"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2000.01.01 12:00:00" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dateTimeEditButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/lightPrimary"
            app:cardCornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/darkSecondaryText"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/dateTimeEditButtonImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@drawable/icon_edit"
                app:tint="@color/white" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/costEditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/spinner_background"
            android:backgroundTint="@color/lightPrimaryText"
            android:fontFamily="@font/pretendard_medium"
            android:hint="@string/cost_input_hint_minus"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:textColor="@color/lightPrimaryText"
            android:textColorHint="@color/lightSecondaryText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:fontFamily="@font/pretendard_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textFontWeight="900"
            android:textSize="24sp"
            app:backgroundTint="@color/red"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/red" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_background"
        android:backgroundTint="@color/lightPrimaryText"
        android:fontFamily="@font/pretendard_medium"
        android:hint="@string/expense_name_minus"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:textColor="@color/lightPrimaryText"
        android:textColorHint="@color/lightSecondaryText"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/tagSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_background"
        android:backgroundTint="@color/lightPrimaryText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:elevation="0dp"
        android:fontFamily="@font/pretendard_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="18sp"
        app:backgroundTint="@color/lightPrimary"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="0dp"
        android:fontFamily="@font/pretendard_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textFontWeight="900"
        android:textSize="18sp"
        app:backgroundTint="@color/lightPrimary"
        app:cornerRadius="0dp" />

</LinearLayout>