<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/pretendard_extrabold"
        android:text="@string/summary"
        android:textColor="@color/lightPrimaryText"
        android:textFontWeight="900"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/tagSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintWidth_percent="0.3" />

    <LinearLayout
        android:id="@+id/yearly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagSpinner">

        <TextView
            android:id="@+id/yearlyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/this_year"
            android:textAlignment="textStart"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/yearlyTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_medium"
            android:textAlignment="textEnd"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp"
            tools:text="\₩ 10,000,000" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearly">

        <TextView
            android:id="@+id/monthlyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/this_month"
            android:textAlignment="textStart"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/monthlyTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_medium"
            android:textAlignment="textEnd"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp"
            tools:text="\₩ 10,000,000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthly">

        <TextView
            android:id="@+id/dailyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/today"
            android:textAlignment="textStart"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dailyTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/pretendard_medium"
            android:textAlignment="textEnd"
            android:textColor="@color/lightPrimaryText"
            android:textFontWeight="900"
            android:textSize="18sp"
            tools:text="\₩ 10,000,000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>